Számtani és mérteni sorozat (11. és 12. feladat kész

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /ParancssoriArgumentum/build/
 /Sorozat/nbproject/private/
 /Sorozat/build/
+/SzamtaniMertani/nbproject/private/
+/SzamtaniMertani/build/
